[package]
name = "harmonic-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rustfft = "6.1"
realfft = "3.3"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
num-complex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "AudioContext",
  "MediaDevices",
  "Navigator",
  "MediaStream",
  "AudioNode",
  "AudioBuffer",
]

[dependencies.js-sys]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
approx = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
